# open-skills

./: .gitignore  GEMINI.md  LICENSE  README.md  README_zh.md  V8CHAT.md  env.template  pyproject.toml  requirements.txt
.github/: FUNDING.yml
docs/: AGENT_GUIDE.md  COMPARISON_REPORT.md  DEPENDENCY_DESIGN.md  ISSUES_AND_SOLUTIONS.md  PYPI_PUBLISH_GUIDE.md  Q&A.md  agent遭遇重大问题.md  讯飞语音API.md
docs/EN/: AGENT_PROMPT.md
docs/ZH/: AGENT_PROMPT.md
open_skills/: Dockerfile  cli.py  sandbox.py
