[project]
name = "open-skills"
version = "0.1.0"
description = "A universal MCP skill runtime executing in a secure Docker sandbox."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",     # FastMCP and CLI tools
    "docker",       # For sandbox management 
    "boto3",        # For S3 uploads
    "requests",     # For downloading files
    "pyyaml",       # Frontmatter parsing
    "python-dotenv" # Env vars
]

[project.scripts]
open-skills = "open_skills.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["open_skills"]

[tool.hatch.build.targets.sdist]
include = ["open_skills"]
